# TauriCPP

./: CMakeLists.txt  README.md  README_zh.md
sample/frontend/: index.html
sample/frontend/css/: style.css
sample/frontend/js/: app.js
sample/src/: main.cpp
src/: embedded_dll.cpp
tools/: make_icon.py
